[package]
name = "polaris-rs"
version = "0.1.1"
edition = "2021"
authors = ["houseme <housemecn@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Lightweight Rust SDK used as Proxyless Service Governance Solution."
homepage = "https://github.com/houseme/polaris-rs"
repository = "https://github.com/houseme/polaris-rs.git"
readme = "README.md"
keywords = ["polaris", "solution", "governance", "server", "proxyless"]
categories = ["config", "asynchronous", "development-tools"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
